fix(posts): allow auto line breaks in paragraph for description field

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,5 +36,5 @@
 }
 
 .with-line-breaks {
-    white-space: pre;
+    white-space: pre-line;
 }
